<resources>
    <string name="app_name">Test</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="find_beer">Odszukaj piwo!</string>
    <string name="brands"></string>
    <string-array name="beer_colors">
        <item>jasne</item>
        <item>ciemne</item>
        <item>bursztynowe</item>
    </string-array>
    <string name="chooser">Wysyłanie wiadomości...</string>
    <string name="stoper">Stoper</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Kasuj</string>
    <string name="workout">Workout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
