<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginLeft="16dp"
            android:id="@+id/editText4"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/edit_message"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button2"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toEndOf="@+id/editText4"
            android:layout_marginStart="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
            android:text="@string/button_send" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:onClick="sendMessage"/>
    <Button
            android:text="@string/find_beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:id="@+id/button"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/editText4"
            android:onClick="findBeer"/>
    <Button
            android:text="@string/stoper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStoper" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/button2"
            android:onClick="onClickStoper"/>
    <Button
            android:text="@string/workout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnStoper" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:onClick="onClickWorkout"/>
</android.support.constraint.ConstraintLayout>