<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StopwatchActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/timeView"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="92sp"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/startButton" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/timeView" android:onClick="onClickStart"/>
    <Button
            android:text="@string/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/stopButton" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/startButton" android:onClick="onClickStop"/>
    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/resetButton" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/stopButton" android:onClick="onClickReset"/>
</android.support.constraint.ConstraintLayout>